[package]
name = "trprvr"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "TRanslate PRogress VieweR"
repository = "https://github.com/liulifox233/trprvr"
readme = "README.md"

[dependencies]
aspasia = "0.2.1"
chardetng = "0.1.17"
clap = { version = "4.5.35", features = ["derive"] }
lazy_static = "1.5.0"
lrc = "0.1.8"
regex = "1.11.1"
walkdir = "2.5.0"
whichlang = "0.1.1"
